<resources>
    <string name="app_name">Medicine</string>

    <string name="drawer_export">Экспорт</string>
    <string name="drawer_import">Импорт</string>

    <string name="action_done">Готово</string>
    <string name="action_copy">Копировать</string>
    <string name="action_delete">Удалить</string>
    <string name="action_search">Поиск</string>
    <string name="action_outdated">Просроченные</string>

    <string name="medicine_empty">Отсутствуют данные для отображения</string>

    <string name="edit_group">Группа:</string>
    <string name="edit_group_add">Новая</string>
    <string name="edit_name">Название:</string>
    <string name="edit_type">Тип:</string>
    <string name="edit_amount">Количество:</string>
    <string name="edit_expiration">Срок годности:</string>
    <string name="edit_description">Описание:</string>
    <string name="edit_link">Ссылка:</string>
    <string name="edit_error_name">Название не может быть пустым</string>
    <string name="edit_success">Сохранено</string>

    <string name="group_new">Новая группа</string>
    <string name="group_remove">Удалить группу</string>

    <string name="notification_near">Срок истекает:\n</string>
    <string name="notification_expired">Просрочены!:\n</string>

    <string name="dialog_add">Добавить</string>
    <string name="dialog_proceed">Продолжить</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_ok">ОК</string>

    <string name="share_using">Отправить</string>
    <string name="export_error">Не удалось экспортировать данные</string>
    <string name="import_warning_title">Внимание</string>
    <string name="import_warning_message">Все текущие данные будут перезаписаны. Продолжить импорт?</string>
    <string name="import_success">Данные успешно импортированы</string>
    <string name="import_error">Не удалось импортировать данные</string>


    <string-array name="edit_months">
        <item>январь</item>
        <item>февраль</item>
        <item>март</item>
        <item>апрель</item>
        <item>май</item>
        <item>июнь</item>
        <item>июль</item>
        <item>август</item>
        <item>сентябрь</item>
        <item>октябрь</item>
        <item>ноябрь</item>
        <item>декабрь</item>
    </string-array>

    <string-array name="medicine_months">
        <item>янв</item>
        <item>фев</item>
        <item>мар</item>
        <item>апр</item>
        <item>май</item>
        <item>июн</item>
        <item>июл</item>
        <item>авг</item>
        <item>сен</item>
        <item>окт</item>
        <item>ноя</item>
        <item>дек</item>
    </string-array>

</resources>
